--- a/bar_chart/index.html
+++ b/bar_chart/index.html
@@ -36,8 +36,9 @@
 			    .text(function(d) { return '$ ' + d; });
 
 			    var circle = d3.selectAll("circle");
-			    circle.style("fill", "steelblue");
-				circle.attr("r", 5);
+			    circle
+			    .style("fill", "steelblue");
+				
         </script>
     </body>
 </html>
